2006-03-06 Mikhail Khodjaiants
	Fix for Bug 93777: Postmortem and Local launch need a default preference for selected debugger.
	* CApplicationLaunchShortcut.java
	* CDebuggerTab.java
	* CoreFileDebuggerTab.java

2006-02-27 Mikhail Khodjaiants
	Fix for Bug 126025: CApplicationLaunchShortcut call to DebugUITools.saveAndBuild 
	invokes workspace wide build unnecessarily.
	Applied patch from Andrew Ferguson (ARM).
	* CApplicationLaunchShortcut.java

2006-02-03 Mikhail Khodjaiants
	NPE in CDebuggerTab when attaching to a target.
	* CDebuggerTab.java

2006-02-03 Mikhail Khodjaiants
	The "ICDebuggerPage" interface and "AbstractCDebuggerPage" class are added.
	All extensions of the "CDebuggerPage" extension point must implement "ICDebuggerPage".
	* AbstractCLaunchDelegate.java

2006-01-30 Mikhail Khodjaiants
	Bug 124519: CDT launch shortcuts ignore Common Tabs "Launch in background" option.
	Applied patch from Andrew Ferguson (andrew.ferguson@arm.com).
	* CApplicationLaunchShortcut.java

2006-01-30 Mikhail Khodjaiants
	Bug 123997: launching subclasses of AbstractCLaunchDelegate causes progress information to be lost.
	Applied patch from Andrew Ferguson (andrew.ferguson@arm.com).
	* AbstractCLaunchDelegate.java

2006-01-29 Mikhail Khodjaiants
	Bug 118894: Allow stopping at other locations other than main().
	Applied patch from Ken Ryall (Nokia).
	* LaunchMessages.properties
	* CDebuggerTab.java

2006-01-25 Mikhail Khodjaiants
	Reversing changes made to fix bug 107571. The fix for bug 119683 covers this problem too.
	Inferior process shouldn't be shown as a part of the attach session.
	* LocalCDILaunchDelegate.java
	* LocalAttachLaunchDelegate.java

2006-01-23 Mikhail Khodjaiants
	Bug 119683: long messages during launch cause gdb to timeout, launch to fail.
	+ LocalCDILaunchDelegate.java
	* LaunchMessages.properties
	* plugin.xml

2006-01-06 Mikhail Khodjaiants
	Bug 120509: CDebuggerTab invokes wong initialization code (in addition to right code).
	* CDebuggerTab.java